[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 461.0
margin_top = 274.0
margin_right = 562.0
margin_bottom = 326.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 97.0
margin_bottom = 52.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 45.0

[node name="PinLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 38.0
text = "Start Game"

[node name="PlayerList" type="ItemList" parent="HBoxContainer"]
margin_left = 101.0
margin_right = 101.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
